[gd_scene load_steps=2 format=3 uid="uid://bwcyumc0gdsfc"]

[ext_resource type="Script" uid="uid://b64b4la2fbnr6" path="res://script/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -3.0
offset_right = -2.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.981
anchor_top = 2.913
anchor_right = 1.981
anchor_bottom = 2.913
offset_left = -2102.0
offset_top = -1680.67
offset_right = -1334.0
offset_bottom = -830.667
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="exit_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Exit Game"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 190.0
offset_top = -7.0
offset_right = 977.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 117
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_game" to="." method="_on_exit_game_pressed"]
